# shibuya

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  README.md  cabal.project  cabal.project.freeze  docker-compose.otel.yaml  flake.nix  mori.dhall
.seihou/: manifest.json
docs/: ARCHITECTURE.md  BROADWAY_COMPARISON.md  HIGH_LEVEL_ARCHITECTURE.md  HS_OPENTELEMETRY_GHC912.md  JAEGER_LOCAL_TESTING.md  MULTI_QUEUE_DESIGN.md  TASKS.md  UNIFIED_ARCHITECTURE.md  USAGE_GUIDE.md
docs/architecture/: CONCURRENCY.md  CORE_TYPES.md  MESSAGE_FLOW.md  METRICS.md  README.md  RUNNER_BUG_FIXES.md
docs/masterplans/: 1-exponential-backoff-for-retries.md
docs/operations/: DEPLOYMENT.md  RUNBOOKS.md
docs/pgmq-adapter/: CONFIGURATION.md  README.md  TEST_PLAN.md
docs/plans/: 1-provide-nfdata-for-core-types.md  2-align-opentelemetry-semantic-conventions.md  3-upgrade-pgmq-hs-to-0.2.md  4-split-pgmq-adapter-into-own-repo.md  5-add-attempt-to-envelope.md  6-add-backoff-policy-module.md  7-populate-attempt-from-pgmq-readcount.md  8-demonstrate-backoff-end-to-end.md  EXPONENTIAL_BACKOFF_DESIGN.md  METRICS_WEB_UI.md  OPENTELEMETRY_INTEGRATION.md  PGMQ_OPENTELEMETRY_INSTRUMENTATION.md  PGMQ_STREAMLY_OPTIMIZATION.md  PRIORITY_1_CRITICAL_FIXES.md  PRIORITY_2_API_CLEANUP.md  PRIORITY_3_CODE_QUALITY.md  PROCESSOR_PAUSE_DESIGN.md  PRODUCTION_READINESS.md
docs/plans/archive/: ACKHALT_IMPLEMENTATION.md  BACKPRESSURE_IMPLEMENTATION.md  CONCURRENT_PROCESSING.md  PGMQ_ADAPTER_DESIGN.md  PREFETCH_STM_BUG.md  PRIORITY_1_CRITICAL_FIXES.md  PRIORITY_2_API_CLEANUP.md  PRIORITY_3_CODE_QUALITY.md
docs/user/: README.md  getting-started.md
mori/: repo-id
shibuya-core/: CHANGELOG.md  shibuya-core.cabal
shibuya-core-bench/: README.md  shibuya-core-bench.cabal
shibuya-core-bench/bench/: Main.hs
shibuya-core-bench/bench/Bench/: Baseline.hs  Concurrency.hs  Framework.hs  Handler.hs
shibuya-core-bench/bench/Test/: StandaloneTest.hs
shibuya-core/src/Shibuya/: Adapter.hs  App.hs  Core.hs  Handler.hs  Policy.hs  Prelude.hs  Runner.hs  Stream.hs  Telemetry.hs
shibuya-core/src/Shibuya/Adapter/: Mock.hs
shibuya-core/src/Shibuya/Core/: Ack.hs  AckHandle.hs  Error.hs  Ingested.hs  Lease.hs  Retry.hs  Types.hs
shibuya-core/src/Shibuya/Runner/: Halt.hs  Ingester.hs  Master.hs  Metrics.hs  Processor.hs  Serial.hs  Supervised.hs
shibuya-core/src/Shibuya/Telemetry/: Config.hs  Effect.hs  Propagation.hs  Semantic.hs
shibuya-core/test/: Main.hs
shibuya-core/test/Shibuya/: PolicySpec.hs  RunnerSpec.hs
shibuya-core/test/Shibuya/Core/: AckSpec.hs  RetrySpec.hs  TypesSpec.hs
shibuya-core/test/Shibuya/Runner/: SupervisedSpec.hs
shibuya-core/test/Shibuya/Telemetry/: EffectSpec.hs  PropagationSpec.hs  SemanticSpec.hs
shibuya-example/: shibuya-example.cabal
shibuya-example/app/: Main.hs
shibuya-metrics/: CHANGELOG.md  shibuya-metrics.cabal
shibuya-metrics/src/Shibuya/: Metrics.hs
shibuya-metrics/src/Shibuya/Metrics/: Config.hs  Health.hs  JSON.hs  Prometheus.hs  Server.hs  Types.hs  WebSocket.hs
shibuya-pgmq-adapter/: CHANGELOG.md  shibuya-pgmq-adapter.cabal
shibuya-pgmq-adapter-bench/: FAILING_BENCHMARKS.md  shibuya-pgmq-adapter-bench.cabal
shibuya-pgmq-adapter-bench/app/: Endurance.hs
shibuya-pgmq-adapter-bench/bench/: BenchSetup.hs
shibuya-pgmq-adapter-bench/bench/Bench/: Ack.hs  Concurrent.hs  Fifo.hs  MultiQueue.hs  Raw.hs  Read.hs  Send.hs  Throughput.hs
shibuya-pgmq-adapter/src/Shibuya/Adapter/: Pgmq.hs
shibuya-pgmq-adapter/src/Shibuya/Adapter/Pgmq/: Config.hs  Convert.hs  Internal.hs
shibuya-pgmq-adapter/test/: Main.hs  TestUtils.hs  TmpPostgres.hs
shibuya-pgmq-adapter/test/Shibuya/Adapter/Pgmq/: ChaosSpec.hs  ConfigSpec.hs  ConvertSpec.hs  IntegrationSpec.hs  InternalSpec.hs  PropertySpec.hs
shibuya-pgmq-example/: README.md  shibuya-pgmq-example.cabal
shibuya-pgmq-example/app/: Consumer.hs  Simulator.hs
shibuya-pgmq-example/src/Example/: Database.hs  Telemetry.hs
