cabal-version: 3.14
name: shibuya-core-bench
version: 0.1.0.0
synopsis: Benchmarks for shibuya-core framework overhead
description:
  Benchmarks comparing shibuya-core framework overhead against pure streamly.
  Measures processing overhead, memory usage, and throughput to ensure
  minimal framework tax on stream processing.

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Benchmarks

common warnings
  ghc-options: -Wall

benchmark shibuya-core-bench
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language: GHC2024
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T -A32m"
    -O2

  other-modules:
    Bench.Baseline
    Bench.Concurrency
    Bench.Framework
    Bench.Handler

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    base ^>=4.21.0.0,
    deepseq,
    effectful-core ^>=2.6,
    nqe,
    shibuya-core,
    stm,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    tasty-bench ^>=0.4,
    text ^>=2.1,
    time,

executable standalone-test
  import: warnings
  main-is: Test/StandaloneTest.hs
  hs-source-dirs: bench
  default-language: GHC2024
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    base ^>=4.21.0.0,
    deepseq,
    effectful-core ^>=2.6,
    nqe,
    shibuya-core,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    text ^>=2.1,
    time,
