cabal-version: 3.14
name: shibuya-core
version: 0.1.0.0
author: Nadeem Bitar
maintainer: nadeem@gmail.com
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Shibuya.Core

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes

  build-depends:
    base ^>=4.21.0.0,
    bytestring ^>=0.12.2.0,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6.1.0,
    generic-lens ^>=2.3.0.0,
    lens ^>=5.3.5,
    nqe ^>=0.6,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    text ^>=2.1.3,
    time,
    uuid,
    vector,

  hs-source-dirs: src
  default-language: GHC2024

test-suite shibuya-core-test
  import: warnings
  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.21.0.0,
    shibuya-core,
