cabal-version: 3.14
name: shibuya-core
version: 0.1.0.0
author: Nadeem Bitar
maintainer: nadeem@gmail.com
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Shibuya.Adapter
    Shibuya.Adapter.Mock
    Shibuya.App
    Shibuya.Core
    Shibuya.Core.Ack
    Shibuya.Core.AckHandle
    Shibuya.Core.Ingested
    Shibuya.Core.Lease
    Shibuya.Core.Types
    Shibuya.Handler
    Shibuya.Policy
    Shibuya.Prelude
    Shibuya.Runner
    Shibuya.Runner.Master
    Shibuya.Runner.Metrics
    Shibuya.Runner.Supervised
    Shibuya.Stream

  other-modules:
    Shibuya.Runner.Halt
    Shibuya.Runner.Ingester
    Shibuya.Runner.Processor
    Shibuya.Runner.Serial

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    base ^>=4.21.0.0,
    bytestring ^>=0.12.2.0,
    containers,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6.1.0,
    generic-lens ^>=2.3.0.0,
    lens ^>=5.3.5,
    nqe ^>=0.6,
    stm,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    text ^>=2.1.3,
    time,
    unliftio ^>=0.2,
    uuid,
    vector,

  hs-source-dirs: src
  default-language: GHC2024

test-suite shibuya-core-test
  import: warnings
  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  other-modules:
    Shibuya.Core.AckSpec
    Shibuya.Core.TypesSpec
    Shibuya.PolicySpec
    Shibuya.Runner.SupervisedSpec
    Shibuya.RunnerSpec

  build-depends:
    QuickCheck ^>=2.15,
    base ^>=4.21.0.0,
    effectful,
    hspec ^>=2.11,
    nqe,
    shibuya-core,
    stm,
    streamly,
    streamly-core,
    text,
    time,
    unliftio,
