cabal-version: 3.14
name: shibuya-core
version: 0.2.0.0
synopsis: Supervised queue processing framework for Haskell
description:
  A supervised queue processing framework inspired by Broadway (Elixir).
  Provides unified queue abstraction, NQE-based supervision, backpressure
  via bounded inbox, explicit ack semantics, and OpenTelemetry tracing.

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Concurrency
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Shibuya.Adapter
    Shibuya.Adapter.Mock
    Shibuya.App
    Shibuya.Core
    Shibuya.Core.Ack
    Shibuya.Core.AckHandle
    Shibuya.Core.Error
    Shibuya.Core.Ingested
    Shibuya.Core.Lease
    Shibuya.Core.Types
    Shibuya.Handler
    Shibuya.Policy
    Shibuya.Prelude
    Shibuya.Runner.Master
    Shibuya.Runner.Metrics
    Shibuya.Runner.Supervised
    Shibuya.Stream
    Shibuya.Telemetry
    Shibuya.Telemetry.Config
    Shibuya.Telemetry.Effect
    Shibuya.Telemetry.Propagation
    Shibuya.Telemetry.Semantic

  other-modules:
    Shibuya.Runner.Halt
    Shibuya.Runner.Ingester
    Shibuya.Runner.Processor
    Shibuya.Runner.Serial

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    bytestring ^>=0.12.2.0,
    containers ^>=0.7,
    deepseq ^>=1.5,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6.1.0,
    generic-lens ^>=2.3.0.0,
    hs-opentelemetry-api ^>=0.3,
    hs-opentelemetry-propagator-w3c ^>=0.1,
    hs-opentelemetry-semantic-conventions ^>=0.1,
    lens ^>=5.3.5,
    nqe ^>=0.6,
    stm ^>=2.5,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    text ^>=2.1.3,
    time ^>=1.14,
    unliftio ^>=0.2,
    unordered-containers ^>=0.2,
    uuid ^>=1.3,
    vector ^>=0.13,

  hs-source-dirs: src
  default-language: GHC2024

test-suite shibuya-core-test
  import: warnings
  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  other-modules:
    Shibuya.Core.AckSpec
    Shibuya.Core.TypesSpec
    Shibuya.PolicySpec
    Shibuya.Runner.SupervisedSpec
    Shibuya.RunnerSpec
    Shibuya.Telemetry.EffectSpec
    Shibuya.Telemetry.PropagationSpec
    Shibuya.Telemetry.SemanticSpec

  build-depends:
    QuickCheck ^>=2.15,
    base ^>=4.21.0.0,
    bytestring,
    effectful,
    hs-opentelemetry-api,
    hs-opentelemetry-exporter-in-memory ^>=0.0,
    hspec ^>=2.11,
    memory,
    nqe,
    shibuya-core,
    stm,
    streamly,
    streamly-core,
    text,
    time,
    unliftio,
    unordered-containers,
    vector,
