cabal-version: 3.14
name: shibuya-example
version: 0.1.0.0
author: Nadeem Bitar
maintainer: nadeem@gmail.com
build-type: Simple

common warnings
  ghc-options: -Wall

executable shibuya-example
  import: warnings
  ghc-options:
    -threaded
    -rtsopts

  main-is: Main.hs
  hs-source-dirs: app
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    base ^>=4.21.0.0,
    containers,
    effectful ^>=2.6.1.0,
    shibuya-core,
    shibuya-metrics,
    streamly-core ^>=0.3,
    text ^>=2.1.3,
