cabal-version: 3.14
name: shibuya-metrics
version: 0.2.0.0
synopsis: Metrics web server for Shibuya queue processing framework
description:
  Provides HTTP/JSON, Prometheus, and WebSocket endpoints for
  exposing Shibuya processor metrics.

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Concurrency
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Shibuya.Metrics
    Shibuya.Metrics.Config
    Shibuya.Metrics.Health
    Shibuya.Metrics.JSON
    Shibuya.Metrics.Prometheus
    Shibuya.Metrics.Server
    Shibuya.Metrics.Types
    Shibuya.Metrics.WebSocket

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards

  build-depends:
    aeson ^>=2.2,
    async ^>=2.2,
    base ^>=4.21.0.0,
    bytestring ^>=0.12,
    containers ^>=0.7,
    http-types ^>=0.12,
    prometheus-client ^>=1.1,
    shibuya-core ^>=0.2.0.0,
    stm ^>=2.5,
    text ^>=2.1,
    time ^>=1.14,
    unliftio ^>=0.2,
    wai ^>=3.2,
    wai-websockets ^>=3.0,
    warp ^>=3.4,
    websockets ^>=0.13,

  hs-source-dirs: src
  default-language: GHC2024
